--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,3 +2,17 @@
     margin: 50px;
     text-align: center;
 }
+
+.add-button {    
+    width: 50px;
+    height: 50px;
+    background-color: rgb(29, 146, 29);
+    font-size: 40px;
+    color: white;
+    margin-top: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    outline: none;
+    border: none;
+}
