--- a/src/components/style.css
+++ b/src/components/style.css
@@ -9,8 +9,7 @@
     background-color: rgb(29, 146, 29);
     font-size: 40px;
     color: white;
-    margin-top: 10px;
-    margin-right: 10px;
+    margin: 10px;
     cursor: pointer;
     border-radius: 50%;
     outline: none;
