--- a/src/components/style.css
+++ b/src/components/style.css
@@ -15,3 +15,13 @@
     outline: none;
     border: none;
 }
+
+.fields {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;
+}
+
+.save-button {
+    margin: 10px
+}
